# skinbaron_pkg

./: .readthedocs.yaml  README.md  pyproject.toml
skinbaron_pkg/: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
skinbaron_pkg/Jupyter_example/: example.ipynb  final_notebook.ipynb  final_proj.ipynb
skinbaron_pkg/docs/: Makefile  conf.py  make.bat
skinbaron_pkg/docs/source/: src.rst
skinbaron_pkg/src/: main.py  market_analysis.py  skinbaron_api.py  visualization_prediction.py
skinbaron_pkg/src/skinbaron_pkg/: __init__.py  data_utils.py  dataparsing.py  market_analysis.py
skinbaron_pkg/tests/: test_data_utils.py  test_dataparsing.py  test_market_analysis.py  test_skinbaron_api.py  test_skinbaron_pkg.py  test_visualization_prediction.py
