[tool.poetry]
name = "skinbaron-pkg"
version = "0.1.0"
description = "A package for getting CSGO market data and perform analysis on the skinbaron website through its API"
authors = ["Qingxuan Guo <qg2218@columbia.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.1.4"
requests = "^2.31.0"
numpy = "^1.26.2"
datetime = "^5.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
