[tool.poetry]
name = "skinbaron_pkg"
version = "0.1.0"
description = "A package for getting CSGO market data and perform analysis on the skinbaron website through its API"
authors = ["Qingxuan Guo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
