[tool.poetry]
name = "skinbaron_pkg"
version = "0.1.0"
description = "A package for getting CSGO market data and perform analysis on the skinbaron website through its API"
authors = ["Qingxuan Guo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
requests = "^2.31.0"
numpy = "^1.26.2"
datetime = "^5.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
sphinx = "^7.2.6"
myst-nb = "^1.0.0"
autoapi = "^2.0.1"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
